--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </li>
         <li class="nav-item">
           <a href="contact.html" class="nav-link">
-            Beep Me
+            Get in Touch
           </a>
         </li>
       </ul>
