--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         </li>
         <li class="nav-item current">
           <a href="contact.html" class="nav-link">
-            Beep Me
+            Get in Touch
           </a>
         </li>
       </ul>
