snkr-project-add

--- a/work.html
+++ b/work.html
@@ -113,6 +113,17 @@
           <i class="fab fa-github"></i> Github
         </a>
       </div>
+      <div class="item">
+        <a href="#!">
+          <img src="img/ezgif.com-gif-maker.gif" alt="Project">
+        </a>
+        <a href="https://epic-ride-44aece.netlify.app" class="btn-light" target="_blank">
+          <i class="fas fa-eye"></i> 3D - DIOR SNKR CARD - JS
+        </a>
+        <a href="https://github.com/mckayanhder/diorsnkr" class="btn-dark" target="_blank">
+          <i class="fab fa-github"></i> Github
+        </a>
+      </div>
       <!-- <div class="item">
         <a href="#!">
           <img src="img/projects/project5.jpg" alt="Project">
