--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
     </h2>
     <div class="projects">
       <div class="item">
-        <a href="#!">
+        <a href="https://gracious-curran-722d71.netlify.app">
           <img src="img/projects/lofi.gif" alt="Project">
         </a>
         <a href="https://gracious-curran-722d71.netlify.app" class="btn-light" target="_blank">
@@ -70,7 +70,7 @@
         </a>
       </div>
       <div class="item">
-        <a href="#!">
+        <a href="https://vigilant-kilby-16001b.netlify.app">
           <img src="img/projects/minitate.gif" alt="Project">
         </a>
         <a href="https://vigilant-kilby-16001b.netlify.app" class="btn-light" target="_blank">
@@ -81,7 +81,7 @@
         </a>
       </div>
       <div class="item">
-        <a href="#!">
+        <a href="https://zen-feynman-b0da98.netlify.app">
           <img src="img/projects/tasker.gif" alt="Project">
         </a>
         <a href="https://zen-feynman-b0da98.netlify.app" class="btn-light" target="_blank">
@@ -92,7 +92,7 @@
         </a>
       </div>
       <div class="item">
-        <a href="#!">
+        <a href="https://clever-tereshkova-b2f5bb.netlify.app">
           <img src="img/projects/cocacola.gif" alt="Project">
         </a>
         <a href="https://clever-tereshkova-b2f5bb.netlify.app" class="btn-light" target="_blank">
@@ -103,10 +103,10 @@
         </a>
       </div>
       <div class="item">
-        <a href="#!">
+        <a href="https://jovial-keller-fdf97c.netlify.app">
           <img src="img/projects/banner image.png" alt="Project">
         </a>
-        <a href="https://jovial-keller-fdf97c.netlify.app/" class="btn-light" target="_blank">
+        <a href="https://jovial-keller-fdf97c.netlify.app" class="btn-light" target="_blank">
           <i class="fas fa-eye"></i> Landing Page - CYBERTRUCK (mock up)
         </a>
         <a href="https://github.com/mckayanhder/cybertruck-landing-page" class="btn-dark" target="_blank">
@@ -114,7 +114,7 @@
         </a>
       </div>
       <div class="item">
-        <a href="#!">
+        <a href="https://epic-ride-44aece.netlify.app">
           <img src="img/ezgif.com-gif-maker.gif" alt="Project">
         </a>
         <a href="https://epic-ride-44aece.netlify.app" class="btn-light" target="_blank">
